move logic for dbs on which host into python

--- a/src/commcare_cloud/ansible/roles/pgbouncer/templates/pgbouncer.ini.j2
+++ b/src/commcare_cloud/ansible/roles/pgbouncer/templates/pgbouncer.ini.j2
@@ -7,13 +7,8 @@
 ;;   client_encoding= datestyle= timezone=
 ;;   pool_size= connect_query=
 [databases]
-{% for db in postgresql_dbs.all %}
-{% if db.create %}
-{% set db_pgbouncer_host = db.pgbouncer_host %}
-{% if db_pgbouncer_host == inventory_hostname or db_pgbouncer_host == hot_standby_master|default(None) or is_monolith|bool %}
-{{ db.name }} = host={{ "localhost" if db.host == db_pgbouncer_host else db.host }} 
-{% endif %}
-{% endif %}
+{% for db in postgresql_dbs.by_host.get(inventory_hostname, []) %}
+{{ db.name }} = host={{ "localhost" if db.host == db.pgbouncer_host else db.host }}
 {% endfor %}
 
 ;; Configuration section
