--- a/src/commcare_cloud/ansible/roles/pgbouncer/templates/pgbouncer_hba.conf.j2
+++ b/src/commcare_cloud/ansible/roles/pgbouncer/templates/pgbouncer_hba.conf.j2
@@ -20,14 +20,11 @@ host{% if postgresql_ssl_enabled %}ssl{% endif %}    {{ db.name }}    {{ user.us
 {% endif %}
 {% for host in host_list | unique %}
 # {{ host }}
-{% for db_name, db_list in postgresql_dbs.all|groupby('name') %}
-{% set db = db_list[0] %}
-{% if db.pgbouncer_host == inventory_hostname or db.pgbouncer_host == hot_standby_master|default(None) or is_monolith|bool %}
+{% for db in postgresql_dbs.by_host.get(inventory_hostname, []) %}
 {% if host | ipaddr %}
-host   {{ db.name }}	{{ db.user }}	{{ host }}/32   md5
+host   {{ db.name }}   {{ db.user }}   {{ host }}/32   md5
 {% else %}
-host   {{ db.name }}	{{ db.user }}	{{ lookup('dig', host, wantlist=True)[0] }}/32	md5
-{% endif %}
+host   {{ db.name }}   {{ db.user }}   {{ lookup('dig', host, wantlist=True)[0] }}/32  md5
 {% endif %}
 {% endfor %}
 {% endfor %}
