--- a/src/commcare_cloud/ansible/roles/postgresql_base/templates/postgresql.conf.j2
+++ b/src/commcare_cloud/ansible/roles/postgresql_base/templates/postgresql.conf.j2
@@ -28,6 +28,18 @@ maintenance_work_mem = {{ postgresql_maintenance_work_mem }}
 vacuum_cost_delay = 20ms
 dynamic_shared_memory_type = posix
 
+# PARALLEL QUERY
+{% if postgresql_max_worker_processes %}
+max_worker_processes = {{ postgresql_max_worker_processes }}
+{% endif %}
+{% if postgresql_max_parallel_workers_per_gather %}
+max_parallel_workers_per_gather = {{ postgresql_max_parallel_workers_per_gather }}
+{% endif %}
+{% if postgresql_effective_io_concurrency %}
+effective_io_concurrency = {{ postgresql_effective_io_concurrency }}
+{% endif %}
+
+
 
 # WRITE AHEAD LOG
 {% if groups['pg_barman']|default(False) and not is_pg_standby %}
@@ -43,6 +55,9 @@ archive_timeout = 300
 wal_level = hot_standby
 max_wal_senders = 8
 max_wal_size = {{ postgresql_max_wal_size }}
+{% if postgresql_min_wal_size %}
+min_wal_size = {{ postgresql_min_wal_size }}
+{% endif %}
 random_page_cost = {{ postgresql_random_page_cost }}
 checkpoint_completion_target = {{ postgresql_checkpoint_completion_target }}
 wal_buffers = {{ postgresql_wal_buffers }}
