--- a/src/commcare_cloud/ansible/roles/pgbouncer/templates/pgbouncer.ini.j2
+++ b/src/commcare_cloud/ansible/roles/pgbouncer/templates/pgbouncer.ini.j2
@@ -47,10 +47,10 @@ unix_socket_dir = /var/run/postgresql
 
 auth_type = {{ pgboucner_auth_type }}
 {% if pgboucner_auth_type == 'hba' %}
-auth_hba_file = /etc/pgbouncer/pgbouncer_hba.conf
+auth_hba_file = {{ pgbouncer_hba }}
 {% endif %}
 
-auth_file = /etc/pgbouncer/userlist.txt
+auth_file = {{ pgbouncer_users }}
 
 ;;;
 ;;; Users allowed into database 'pgbouncer'
