--- a/src/commcare_cloud/ansible/roles/pgbouncer/templates/pgbouncer_hba.conf.j2
+++ b/src/commcare_cloud/ansible/roles/pgbouncer/templates/pgbouncer_hba.conf.j2
@@ -3,35 +3,9 @@
 host    all             all             127.0.0.1/32            md5
 local   all             all                                     md5
 
-{% if cluster_ip_range is defined %}
-{% for db_name, db_list in postgresql_dbs.all|groupby('name') %}
-{% set db = db_list[0] %}
-{% if db.pgbouncer_host == inventory_hostname or db.pgbouncer_host == hot_standby_master|default(None) or is_monolith|bool %}
-{% for user_key in postgres_users | reject('in', ['netvault', 'replication'])  %}
-{% set user = postgres_users[user_key] %}
-host{% if postgresql_ssl_enabled %}ssl{% endif %}    {{ db.name }}    {{ user.username }}    {{ cluster_ip_range }}    md5
-{% endfor %}
-{% endif %}
-{% endfor %}
-{%  else %}
-{% set host_list = groups['formplayer'] + groups.get('touchforms', []) + groups['webworkers'] + groups['celery'] + groups['pillowtop'] + groups['postgresql'] + groups.get('pg_standby',[]) + groups.get('airflow', []) %}
-{% if run_websockets_wsgi %}
-{% set host_list = host_list + groups['proxy'] %}
-{% endif %}
-{% for host in host_list | unique %}
-# {{ host }}
-{% for db_name, db_list in postgresql_dbs.all|groupby('name') %}
-{% set db = db_list[0] %}
-{% if db.pgbouncer_host == inventory_hostname or db.pgbouncer_host == hot_standby_master|default(None) or is_monolith|bool %}
-{% if host | ipaddr %}
-host   {{ db.name }}	{{ db.user }}	{{ host }}/32   md5
-{% else %}
-host   {{ db.name }}	{{ db.user }}	{{ lookup('dig', host, wantlist=True)[0] }}/32	md5
-{% endif %}
-{% endif %}
-{% endfor %}
-{% endfor %}
-{% endif %}
+{% for entry in pgbouncer_hba_entries %}
+{{ entry.contype|default('host') }}    {{ entry.databases|default('all') }}    {{ entry.users|default('all') }}    {% if entry.contype != 'local' %}{{ entry.netmask }}{% endif %}    {{ entry.method|default('md5') }}
+{{ endfor }}
 
 {% set citus_host_list = groups.get('citusdb_worker', []) + groups.get('citusdb_cordinator', []) | unique %}
 {% if inventory_hostname in citus_host_list %}
