--- a/src/commcare_cloud/ansible/roles/postgresql_base/templates/pg_hba.conf.j2
+++ b/src/commcare_cloud/ansible/roles/postgresql_base/templates/pg_hba.conf.j2
@@ -12,22 +12,15 @@ local   replication     postgres                                peer
 {{ entry.contype|default('host') }}    {{ entry.databases|default('all') }}    {{ entry.users|default('all') }}    {% if entry.contype != 'local' %}{{ entry.netmask }}{% endif %}    {{ entry.method|default('md5') }}
 {{ endfor }}
 
-{% if allow_direct_citusdb_access %}
-# trus access for CitusDB connections only
-{% for host in (  groups.get('citusdb_worker', []) + groups.get('citusdb_cordinator', [])) | unique %}
-# {{ host }}
-{% for db_name, db_list in postgresql_dbs.all|groupby('name') %}
-{% set db = db_list[0] %}
-{% if db.host in groups.get('citusdb_cordinator', []) %}
+{% if inventory_hostname in groups.get('citusdb_worker', []) %}
+{% for host in groups.get('citusdb_cordinator', []) %}
 {% if host | ipaddr %}
-host   {{ db.name }}	{{ db.user }}	{{ host }}/32   trust
+host   all	all	{{ host }}/32   trust
 {% else %}
-host   {{ db.name }}	{{ db.user }}	{{ lookup('dig', host, wantlist=True)[0] }}/32	trust
-{% endif %}
+host   all	all	{{ lookup('dig', host, wantlist=True)[0] }}/32	trust
 {% endif %}
 {% endfor %}
-{% endfor %}
-{% endif %}
+
 # "local" is for Unix domain socket connections only
 local   all             all                                     peer
 
