--- a/src/commcare_cloud/ansible/roles/pgbouncer/templates/pgbouncer.ini.j2
+++ b/src/commcare_cloud/ansible/roles/pgbouncer/templates/pgbouncer.ini.j2
@@ -45,8 +45,8 @@ unix_socket_dir = /var/run/postgresql
 ;;; Authentication settings
 ;;;
 
-auth_type = {{ pgboucner_auth_type }}
-{% if pgboucner_auth_type == 'hba' %}
+auth_type = {{ pgbouncer_auth_type }}
+{% if pgbouncer_auth_type == 'hba' %}
 auth_hba_file = {{ pgbouncer_hba }}
 {% endif %}
 
