enable PG wal archive feature

--- a/src/commcare_cloud/ansible/roles/postgresql_base/templates/postgresql.conf.j2
+++ b/src/commcare_cloud/ansible/roles/postgresql_base/templates/postgresql.conf.j2
@@ -41,6 +41,12 @@ effective_io_concurrency = {{ postgresql_effective_io_concurrency }}
 
 
 # WRITE AHEAD LOG
+{% if postgresql_enable_archive and not is_pg_standby %}
+archive_mode = on
+archive_command = {{ postgresql_archive_command }}
+archive_timeout = {{ postgresql_archive_timeout }}
+{% endif %}
+
 wal_level = hot_standby
 max_wal_senders = 8
 max_wal_size = {{ postgresql_max_wal_size }}
