--- a/environments/india/inventory.ini.j2
+++ b/environments/india/inventory.ini.j2
@@ -1,3 +1,24 @@
+{{ __control0__ }}
+{{ __djangomanage0__ }}
+{{ __web0__ }}
+{{ __web1__ }}
+{{ __citus0__ }}
+{{ __citus1__ }}
+{{ __citus2__ }}
+{{ __airflow1__ }}
+{{ __celery1__ }}
+{{ __couch2__ }}
+{{ __couch3__ }}
+{{ __couch4__ }}
+{{ __redis0__ }}
+{{ __es0__ }}
+{{ __es1__ }}
+{{ __formplayer1__ }}
+{{ __pillow2__ }}
+{{ __kafka0__ }}
+{{ __proxy1__ }} public_ip={{ aws_resources['proxy1-india.public_ip'] }}
+{{ __rds_pgmain0__ }}
+
 [celery0]
 10.162.36.233 hostname="celery0.india.commcarehq.org" encrypted_root=/opt/tmp
 
@@ -11,13 +32,6 @@ datavol_device='/dev/mapper/consolidated-data'
 
 [django1]
 10.162.36.231 hostname="django1.india.commcarehq.org"
-
-{{ __web0__ }}
-{{ __web1__ }}
-
-{{ __citus0__ }}
-{{ __citus1__ }}
-{{ __citus2__ }}
 
 [citusdb_worker:children]
 citus1
@@ -56,8 +70,6 @@ datavol_device=/dev/xvdc
 
 [proxy0]
 10.162.36.203 hostname="proxy0.india.commcarehq.org"
-
-{{ __proxy1__ }} public_ip={{ aws_resources['proxy1-india.public_ip'] }}
 
 [formplayer0]
 10.162.36.248 hostname="formplayer0.india.commcarehq.org" encrypted_root=/opt/data/ecrypt
@@ -163,15 +175,11 @@ couch1
 couch_big_nodes
 celery0
 
-{{ __control0__ }}
-
 [control_sl]
 10.162.36.196 hostname="control.india.commcarehq.org"
 
 [control:children]
 control0
-
-{{ __djangomanage0__ }}
 
 [django_manage:children]
 djangomanage0
