--- a/environments/india/inventory.ini.j2
+++ b/environments/india/inventory.ini.j2
@@ -16,6 +16,7 @@
 {{ __formplayer1__ }}
 {{ __pillow2__ }}
 {{ __kafka0__ }}
+{{ __pgbouncer0__ }}
 {{ __proxy1__ }} public_ip={{ aws_resources['proxy1-india.public_ip'] }}
 {{ __rds_pgmain0__ }}
 
