--- a/environments/india/inventory.ini.j2
+++ b/environments/india/inventory.ini.j2
@@ -20,6 +20,8 @@
 {{ __proxy1__ }} public_ip={{ aws_resources['proxy1-india.public_ip'] }}
 {{ __rds_pgmain0__ }}
 
+rds_pgmain0
+
 [celery0]
 10.162.36.233 hostname="celery0.india.commcarehq.org" encrypted_root=/opt/tmp
 
@@ -117,38 +119,41 @@ proxy1
 proxy0
 
 [webworkers:children]
-django0
-django1
-#web0
-#web1
+web0
+web1
 
 [postgresql:children]
-db1
+db1  # todo: remove
+pgbouncer0
+remote_postgresql
 
 [rabbitmq:children]
-kafka0
+kafka1
 
 [zookeeper:children]
-kafka0
+kafka1
 
 [kafka:children]
-kafka0
+kafka1
 
 [celery:children]
-celery0
+celery0  # todo: remove
+celery1
 
 [pillowtop:children]
-pillow1
+pillow2
 
 [formplayer:children]
-formplayer0
+formplayer1
 
 [redis:children]
-db1
+redis0
 
 [elasticsearch:children]
-es2
-es3
+es2  # todo: remove
+es3  # todo: remove
+es0
+es1
 
 [shared_dir_host:children]
 db1
@@ -167,7 +172,10 @@ datavol_device=/dev/xvdc
 riak15
 
 [couchdb2:children]
-couch_big_nodes
+couch_big_nodes  # todo: remove
+couch2
+couch3
+couch4
 
 [couchdb2_proxy:children]
 couch1
@@ -191,7 +199,7 @@ djangomanage0
 db1
 
 [airflow:children]
-airflow0
+airflow1
 
 [remote_postgresql:children]
 rds_pgmain0
