--- a/src/commcare_cloud/ansible/roles/nginx/templates/site.j2
+++ b/src/commcare_cloud/ansible/roles/nginx/templates/site.j2
@@ -4,7 +4,7 @@
 
 {% for balancer in item.server.get('balancers', []) %}
 upstream {{ balancer.name }} {
-  zone {{ balancer.name }} {{ balancer.zone|default('64k') }};
+#  zone {{ balancer.name }} {{ balancer.zone|default('64k') }};
 
   {% if balancer.get('method') %}
   {{ balancer.method }};
