--- a/environments/staging/inventory.ini.j2
+++ b/environments/staging/inventory.ini.j2
@@ -40,10 +40,19 @@ remote_postgresql
 
 {{ __couch2__ }}
 
+{{ __couch3__ }}
+
+{{ __couch4__ }}
+
+{{ __couch5__ }}
+
 [couchdb2:children]
 couch0
 couch1
 couch2
+couch3
+couch4
+couch5
 
 [couchdb2_proxy:children]
 couch0
