--- a/environments/india/inventory.ini.j2
+++ b/environments/india/inventory.ini.j2
@@ -11,11 +11,11 @@
 {{ __couch3__ }}
 {{ __couch4__ }}
 {{ __redis0__ }}
-{{ __es0__ }}
-{{ __es1__ }}
+{{ __es0__ }} elasticsearch_node_name=es0 elasticsearch_node_zone=aws
+{{ __es1__ }} elasticsearch_node_name=es1 elasticsearch_node_zone=aws
 {{ __formplayer1__ }}
 {{ __pillow2__ }}
-{{ __kafka1__ }}
+{{ __kafka1__ }} kafka_broker_id=1
 {{ __pgbouncer0__ }}
 {{ __proxy1__ }} public_ip={{ aws_resources['proxy1-india.public_ip'] }}
 {{ __rds_pgmain0__ }}
@@ -91,13 +91,13 @@ datavol_device=/dev/xvdc
 10.162.36.202 hostname="riak19.india.commcarehq.org" encrypted_root=/opt/data/ecrypt
 
 [couch1]
-10.162.36.218 hostname="couch1.india.commcarehq.org" encrypted_root=/opt/data/ecrypt
+10.162.36.218 hostname="couch1.india.commcarehq.org"
 
 [couch5]
-10.162.36.208 hostname="couch5.india.commcarehq.org" encrypted_root=/opt/data/ecrypt
+10.162.36.208 hostname="couch5.india.commcarehq.org"
 
 [couch6]
-10.162.36.234 hostname="couch6.india.commcarehq.org" encrypted_root=/opt/data/ecrypt
+10.162.36.234 hostname="couch6.india.commcarehq.org"
 
 [couch_big_nodes:children]
 couch1
