Take everything off of celery0 and pillow1 (softlayer machines)

--- a/environments/india/inventory.ini.j2
+++ b/environments/india/inventory.ini.j2
@@ -134,10 +134,12 @@ kafka1
 kafka1
 
 [celery:children]
+celery0
 celery1
 
 [pillowtop:children]
 pillow2
+pillow1
 
 [formplayer:children]
 formplayer1
