--- a/src/commcare_cloud/ansible/roles/kafka/templates/kafka-server.service.j2
+++ b/src/commcare_cloud/ansible/roles/kafka/templates/kafka-server.service.j2
@@ -8,7 +8,7 @@ After=network.target remote-fs.target kafka-zookeeper.service
 Type=simple
 User=kafka
 Group=kafka
-ExecStart=/opt/kafka/bin/kafka-server-start.sh /opt/kafka/config/server.properties
+ExecStart=/opt/kafka/bin/kafka-server-start.sh {{ kafka_conf_dir }}/server.properties
 ExecStop=/opt/kafka/bin/kafka-server-stop.sh
 
 [Install]
