--- a/src/commcare_cloud/commands/terraform/templates/variables.tf.j2
+++ b/src/commcare_cloud/commands/terraform/templates/variables.tf.j2
@@ -17,13 +17,17 @@ variable "openvpn_instance_type" {
   default = "t2.small"
 }
 
-# Use 'hvm:ebs-ssd' AMIs from https://cloud-images.ubuntu.com/locator/ec2/
+
 variable "server_image" {
+  # Use 'hvm:ebs-ssd' AMIs from https://cloud-images.ubuntu.com/locator/ec2/
   default = "{{ {'us-east-1': 'ami-07cf43e1798df5582', 'ap-south-1': 'ami-04242e05c1ebface0'}[region] }}"
 }
 
 variable "bionic_server_image" {
-  default = "{{ {'us-east-1': 'ami-012fd5eb46f56731f', 'ap-south-1': 'ami-0a63d6cdb8b90bdae'}[region] }}"
+  # https://cloud-images.ubuntu.com/locator/ec2/
+  # Using search hvm:ebs-ssd bionic amd64
+  # Current release: 20190514
+  default = "{{ {'us-east-1': 'ami-024a64a6685d05041', 'ap-south-1': 'ami-076b389b9989430c2'}[region] }}"
 }
 
 variable "dns_zone_id" {}
