--- a/src/commcare_cloud/ansible/roles/postgresql_base/templates/postgresql.conf.j2
+++ b/src/commcare_cloud/ansible/roles/postgresql_base/templates/postgresql.conf.j2
@@ -43,7 +43,7 @@ effective_io_concurrency = {{ postgresql_effective_io_concurrency }}
 # WRITE AHEAD LOG
 {% if postgresql_enable_archive and not is_pg_standby %}
 archive_mode = on
-archive_command = {{ postgresql_archive_command }}
+archive_command = '{{ postgresql_archive_command }}'
 archive_timeout = {{ postgresql_archive_timeout }}
 {% endif %}
 
