use Python 3 for all HQ code

--- a/src/commcare_cloud/ansible/roles/commcarehq/templates/common_supervisor_management.conf.j2
+++ b/src/commcare_cloud/ansible/roles/commcarehq/templates/common_supervisor_management.conf.j2
@@ -1,7 +1,7 @@
 [program:{{ project }}-{{ deploy_env }}-{{ item.process_name }}]
 directory={{ code_home }}
 environment=TMPDIR="{{ encrypted_tmp }}"
-command={% if PY3_RUN_MANAGEMENT %}{{ py3_virtualenv_home }}{% else %}{{ virtualenv_home }}{% endif %}/bin/python
+command={{ py3_virtualenv_home }}/bin/python
     manage.py {{ item.management_command }}
 user={{ cchq_user }}
 numprocs=1
