--- a/src/commcare_cloud/ansible/roles/commcarehq/templates/supervisor_celery_beat.conf.j2
+++ b/src/commcare_cloud/ansible/roles/commcarehq/templates/supervisor_celery_beat.conf.j2
@@ -1,5 +1,5 @@
 [program:{{ project }}-{{ deploy_env }}-celerybeat]
-command={% if PY3_RUN_CELERY_BEAT %}{{ py3_virtualenv_home }}{% else %}{{ virtualenv_home }}{% endif %}/bin/celery
+command={{ py3_virtualenv_home }}/bin/celery
     -A corehq beat
     --loglevel=INFO
 directory={{ code_home }}
