--- a/src/commcare_cloud/ansible/roles/pgbouncer/templates/pgbouncer.ini.j2
+++ b/src/commcare_cloud/ansible/roles/pgbouncer/templates/pgbouncer.ini.j2
@@ -7,6 +7,12 @@
 ;;   client_encoding= datestyle= timezone=
 ;;   pool_size= connect_query=
 [databases]
+{% set current_host = inventory_hostname %}
+{% if is_monolith %}{% set current_host = DEFAULT_POSTGRESQL_HOST %}{% endif %}
+{% for db in postgresql_dbs.by_host.get(current_host, []) %}
+{{ db.name }} = host={{ "localhost" if db.host == db.pgbouncer_host else db.host }}
+{% endfor %}
+
 {% for db in postgresql_dbs.all %}
 {% if db.create %}
 {% set db_pgbouncer_host = db.pgbouncer_host %}
