--- a/src/commcare_cloud/ansible/roles/postgresql_base/templates/postgresql.conf.j2
+++ b/src/commcare_cloud/ansible/roles/postgresql_base/templates/postgresql.conf.j2
@@ -27,6 +27,9 @@ max_stack_depth = {{ postgresql_max_stack_depth }}
 maintenance_work_mem = {{ postgresql_maintenance_work_mem }}
 vacuum_cost_delay = 20ms
 dynamic_shared_memory_type = posix
+{% if postgresql_max_locks_per_transaction %}
+max_locks_per_transaction = {{ postgresql_max_locks_per_transaction }}
+{% endif %}
 
 # PARALLEL QUERY
 {% if postgresql_max_worker_processes %}
