--- a/environments/india/inventory.ini.j2
+++ b/environments/india/inventory.ini.j2
@@ -6,7 +6,7 @@
 {{ __citus1__ }}
 {{ __citus2__ }}
 {{ __airflow1__ }}
-{{ __celery1__ }}
+{{ __celery1__ }} swap_size=4G
 {{ __couch2__ }}
 {{ __couch3__ }}
 {{ __couch4__ }}
