--- a/src/commcare_cloud/ansible/roles/backups/templates/check_s3_backup.py.j2
+++ b/src/commcare_cloud/ansible/roles/backups/templates/check_s3_backup.py.j2
@@ -39,8 +39,22 @@ bucket = s3.Bucket(BUCKET_NAME)
 today = datetime.datetime.today()
 
 backup_filename_format = '{prefix}_{backup_type}_{date}.tar.gz'
-daily_options = [backup_filename_format.format(prefix=PREFIX, backup_type='daily', date=(today - datetime.timedelta(days=n)).strftime('%Y_%m_%d')) for n in [0, 1]]
-weekly_options = [backup_filename_format.format(prefix=PREFIX, backup_type='weekly', date=(today - datetime.timedelta(days=n)).strftime('%Y_%m_%d')) for n in [0, 1, 2, 3, 4, 5, 6]]
+daily_options = [
+    backup_filename_format.format(
+        prefix=PREFIX,
+        backup_type='daily',
+        date=(today - datetime.timedelta(days=n)).strftime('%Y_%m_%d')
+    )
+    for n in [0, 1]
+]
+weekly_options = [
+    backup_filename_format.format(
+        prefix=PREFIX,
+        backup_type='weekly',
+        date=(today - datetime.timedelta(days=n)).strftime('%Y_%m_%d')
+    )
+    for n in [0, 1, 2, 3, 4, 5, 6]
+]
 
 daily_matches = []
 weekly_matches = []
@@ -54,14 +68,16 @@ for obj in bucket.objects.all():
 if daily_matches:
     daily_matches.sort(key=lambda obj: obj.last_modified)
     match = daily_matches[-1]
-    print('[OK] Last daily {} backup is {}, uploaded @ {}'.format(args.service, match.key, match.last_modified))
+    print('[OK] Last daily {} backup is {}, uploaded @ {}'.format(
+        args.service, match.key, match.last_modified))
 else:
     print('[ALERT] No daily {} backup in last two days'.format(args.service))
 
 if weekly_matches:
     weekly_matches.sort(key=lambda obj: obj.last_modified)
     match = weekly_matches[-1]
-    print('[OK] Last weekly {} backup is {}, uploaded @ {}'.format(args.service, match.key, match.last_modified))
+    print('[OK] Last weekly {} backup is {}, uploaded @ {}'.format(
+        args.service, match.key, match.last_modified))
 else:
     print('[ALERT] No weekly {} backup in last seven days'.format(args.service))
 
