--- a/environments/india/inventory.ini.j2
+++ b/environments/india/inventory.ini.j2
@@ -10,6 +10,9 @@
 {{ __couch2__ }}
 {{ __couch3__ }}
 {{ __couch4__ }}
+{{ __couch5__ }}
+{{ __couch6__ }}
+{{ __couch7__ }}
 {{ __redis0__ }}
 {{ __es0__ }} elasticsearch_node_name=es0 elasticsearch_node_zone=aws
 {{ __es1__ }} elasticsearch_node_name=es1 elasticsearch_node_zone=aws
@@ -70,6 +73,9 @@ redis0
 couch2
 couch3
 couch4
+couch5
+couch6
+couch7
 
 [couchdb2_proxy:children]
 couch2
