--- a/src/commcare_cloud/ansible/roles/pgbouncer/templates/pgbouncer.ini.j2
+++ b/src/commcare_cloud/ansible/roles/pgbouncer/templates/pgbouncer.ini.j2
@@ -51,11 +51,7 @@ unix_socket_dir = /var/run/postgresql
 ;;; Authentication settings
 ;;;
 
-auth_type = {{ pgbouncer_auth_type }}
-{% if pgbouncer_auth_type == 'hba' %}
-auth_hba_file = {{ pgbouncer_hba }}
-{% endif %}
-
+auth_type = md5
 auth_file = {{ pgbouncer_users }}
 
 ;;;
