Add new production couchdb2 bionic machines

--- a/environments/production/inventory.ini.j2
+++ b/environments/production/inventory.ini.j2
@@ -183,6 +183,10 @@ es_data
 {{ __couch8__ }}
 {{ __couch9__ }}
 
+{{ __couch10__ }}
+{{ __couch11__ }}
+{{ __couch12__ }}
+
 [couchdb2:children]
 couch3
 couch4
@@ -190,6 +194,9 @@ couch5
 couch7
 couch8
 couch9
+couch10
+couch11
+couch12
 
 [couchdb2:vars]
 swap_size=8G
