--- a/src/commcare_cloud/ansible/roles/nginx/templates/nginx.conf.j2
+++ b/src/commcare_cloud/ansible/roles/nginx/templates/nginx.conf.j2
@@ -1,7 +1,7 @@
 # {{ ansible_managed }}
 user {{ nginx_user }};
 worker_processes  {{ ansible_processor_count }};
-pid        /var/run/nginx.pid;
+pid /run/nginx.pid;
 
 worker_rlimit_nofile {{ nginx_worker_rlimit_nofile }};
 
