--- a/environments/production/inventory.ini.j2
+++ b/environments/production/inventory.ini.j2
@@ -196,6 +196,7 @@ couchproxy0
 {{ __control__ }}
 
 {{ __djangomanage0__ }}
+{{ __djangomanage1__ }}
 
 [django_manage:children]
-djangomanage0
+djangomanage1
