--- a/src/commcare_cloud/ansible/roles/commcarehq/templates/localsettings.py.j2
+++ b/src/commcare_cloud/ansible/roles/commcarehq/templates/localsettings.py.j2
@@ -257,6 +257,9 @@ LOCAL_PILLOWTOPS = {
 }
 {% endif %}
 
+{% if 'CASE_ES_DROP_FORM_FIELDS' in localsettings %}
+CASE_ES_DROP_FORM_FIELDS = {{ localsettings.CASE_ES_DROP_FORM_FIELDS }}
+{% endif %}
 
 BITLY_LOGIN = '{{ BITLY_LOGIN }}'
 BITLY_APIKEY = '{{ BITLY_APIKEY }}'
