--- a/environments/production/inventory.ini.j2
+++ b/environments/production/inventory.ini.j2
@@ -101,6 +101,8 @@ kafka0
 
 {{ __celery6__ }}
 
+{{ __celery7__ }}
+
 
 [celery:children]
 celery1
@@ -110,6 +112,7 @@ celery3
 celery4
 celery5
 celery6
+celery7
 
 [celery:vars]
 swap_size=8G
