--- a/src/commcare_cloud/ansible/roles/postgresql_base/templates/postgresql.conf.j2
+++ b/src/commcare_cloud/ansible/roles/postgresql_base/templates/postgresql.conf.j2
@@ -5,7 +5,7 @@ cluster_name = '{{postgresql_cluster_name}}'
 
 # FILE LOCATIONS
 
-data_directory = '{{ postgresql_home }}'
+data_directory = '{{ postgresql_data_dir }}'
 hba_file = '{{ postgresql_config_home }}/pg_hba.conf'
 ident_file = '{{ postgresql_config_home }}/pg_ident.conf'
 external_pid_file = '{{ postgresql_pid_file }}'
