--- a/src/commcare_cloud/ansible/roles/nginx/templates/site.j2
+++ b/src/commcare_cloud/ansible/roles/nginx/templates/site.j2
@@ -38,6 +38,10 @@ proxy_cache_path {{ cache.path }} levels=1:2 keys_zone={{ cache.name }}:10m
 
 server {
 
+{% for ip in nginx_block_ips %}
+  deny {{ ip }};
+{% endfor %}
+
 {% if nginx_separate_logs_per_site == True %}
   access_log {{ log_home }}/{{ item.server.file_name }}-{{ nginx_access_log_name }} rt_cache;
   error_log {{ log_home }}/{{ item.server.file_name }}-{{ nginx_error_log_name }} warn;
