--- a/src/commcare_cloud/ansible/roles/couchdb2/templates/restore_couchdb_backup.sh.j2
+++ b/src/commcare_cloud/ansible/roles/couchdb2/templates/restore_couchdb_backup.sh.j2
@@ -6,6 +6,10 @@ read -p 'Are you sure you want to restore couchdb to a past state [y/N]: ' -r co
 if [ $confirm != 'y' ]; then
     exit 1
 fi
+read -p 'This script will only work on single-node clusters. Damage may occur if this couchdb cluster has more than one node. Are you restoring to a single node? [y/N]: ' -r confirm_nodes
+if [ $confirm_nodes != 'y' ]; then
+    exit 1
+fi
 read -p "This will delete the current db and replace it with the contents of ${BACKUP}. Are you SURE you are sure [y/N]: " -r confirm2
 if [ $confirm2 != 'y' ]; then
     exit 1
