--- a/src/commcare_cloud/ansible/roles/commcarehq/templates/localsettings.py.j2
+++ b/src/commcare_cloud/ansible/roles/commcarehq/templates/localsettings.py.j2
@@ -123,7 +123,7 @@ EMAIL_BACKEND='django.core.mail.backends.console.EmailBackend'
 
 EMAIL_SUBJECT_PREFIX = '[{{ env_monitoring_id }}] '
 
-ENABLE_SOFT_ASSERT_EMAILS = {{ localsettings.ENABLE_SOFT_ASSERT_EMAILS|default(True) }}
+ENABLE_SOFT_ASSERT_EMAILS = {{ localsettings.ENABLE_SOFT_ASSERT_EMAILS|default(False) }}
 
 SERVER_ENVIRONMENT = '{{ env_monitoring_id }}'
 
