Add squashfs in blacklist for mount point monitoring

--- a/src/commcare_cloud/ansible/roles/datadog/templates/disk.yaml.j2
+++ b/src/commcare_cloud/ansible/roles/datadog/templates/disk.yaml.j2
@@ -9,6 +9,7 @@ instances:
     file_system_blacklist:
       - tmpfs$
       - devtmpfs$
+      - squashfs$
     mount_point_blacklist:
       - /boot$
     service_check_rw: true
