replace REPORT_BUILDER_ADD_ON_EMAIL with SALES_EMAIL

--- a/src/commcare_cloud/ansible/roles/commcarehq/templates/localsettings.py.j2
+++ b/src/commcare_cloud/ansible/roles/commcarehq/templates/localsettings.py.j2
@@ -846,7 +846,7 @@ BILLING_EMAIL = '{{ billing_email }}'
 INVOICING_CONTACT_EMAIL = '{{ invoicing_contact_email }}'
 GROWTH_EMAIL = '{{ growth_email }}'
 MASTER_LIST_EMAIL = '{{ master_list_email }}'
-REPORT_BUILDER_ADD_ON_EMAIL = '{{ report_builder_add_on_email }}'
+SALES_EMAIL = '{{ sales_email }}'
 EULA_CHANGE_EMAIL = '{{ eula_change_email }}'
 CONTACT_EMAIL = '{{ contact_email }}'
 SOFT_ASSERT_EMAIL = '{{ soft_assert_email }}'
