add privacy email

--- a/src/commcare_cloud/ansible/roles/commcarehq/templates/localsettings.py.j2
+++ b/src/commcare_cloud/ansible/roles/commcarehq/templates/localsettings.py.j2
@@ -847,6 +847,7 @@ INVOICING_CONTACT_EMAIL = '{{ invoicing_contact_email }}'
 GROWTH_EMAIL = '{{ growth_email }}'
 MASTER_LIST_EMAIL = '{{ master_list_email }}'
 SALES_EMAIL = '{{ sales_email }}'
+PRIVACY_EMAIL = '{{ privacy_email }}'
 EULA_CHANGE_EMAIL = '{{ eula_change_email }}'
 CONTACT_EMAIL = '{{ contact_email }}'
 SOFT_ASSERT_EMAIL = '{{ soft_assert_email }}'
