Add 8GB swap to india couch nodes

--- a/environments/india/inventory.ini.j2
+++ b/environments/india/inventory.ini.j2
@@ -7,9 +7,9 @@
 {{ __citus2__ }}
 {{ __airflow1__ }}
 {{ __celery1__ }} swap_size=4G
-{{ __couch5__ }}
-{{ __couch6__ }}
-{{ __couch7__ }}
+{{ __couch5__ }} swap_size=8G
+{{ __couch6__ }} swap_size=8G
+{{ __couch7__ }} swap_size=8G
 {{ __redis0__ }}
 {{ __es0__ }} elasticsearch_node_name=es0 elasticsearch_node_zone=aws
 {{ __es1__ }} elasticsearch_node_name=es1 elasticsearch_node_zone=aws
