--- a/environments/production/inventory.ini.j2
+++ b/environments/production/inventory.ini.j2
@@ -1,4 +1,5 @@
 {{ __proxy0__ }} public_ip={{ aws_resources['proxy0-production.public_ip'] }}
+{{ __proxy1__ }} public_ip={{ aws_resources['proxy0-production.public_ip'] }}
 
 [proxy:children]
 proxy0
