--- a/environments/production/inventory.ini.j2
+++ b/environments/production/inventory.ini.j2
@@ -7,7 +7,7 @@ proxy0
 
 {{ __web3__ }}
 
-{{ __web4__ } datadog_integration_tcp_check=yes
+{{ __web4__ }} datadog_integration_tcp_check=yes
 
 {{ __web10__ }}
 
