Fix swiss backup checks

--- a/src/commcare_cloud/ansible/roles/backups/templates/check_s3_backup.py.j2
+++ b/src/commcare_cloud/ansible/roles/backups/templates/check_s3_backup.py.j2
@@ -60,7 +60,7 @@ weekly_options = [
         backup_type='weekly',
         date=(today - datetime.timedelta(days=n)).strftime('%Y_%m_%d')
     )
-    for n in [0, 1, 2, 3, 4, 5, 6]
+    for n in [0, 1, 2, 3, 4, 5, 6, 7]
 ]
 
 # up to one match will be stored in these
