--- a/environments/production/inventory.ini.j2
+++ b/environments/production/inventory.ini.j2
@@ -138,16 +138,35 @@ shareddir0
 
 {{ __es14__ }} elasticsearch_node_name=es14
 
+{{ __es15__ }} elasticsearch_node_name=es14
+
+{{ __es16__ }} elasticsearch_node_name=es14
+
+{{ __es17__ }} elasticsearch_node_name=es14
+
+{{ __es18__ }} elasticsearch_node_name=es14
+
+{{ __es19__ }} elasticsearch_node_name=es14
+
 {{ __esmaster0__ }} elasticsearch_node_name=esmaster0
 
 {{ __esmaster1__ }} elasticsearch_node_name=esmaster1
 
 {{ __esmaster2__ }} elasticsearch_node_name=esmaster2
 
+{{ __esmaster3__ }} elasticsearch_node_name=esmaster2
+
+{{ __esmaster4__ }} elasticsearch_node_name=esmaster2
+
+{{ __esmaster5__ }} elasticsearch_node_name=esmaster2
+
 [es_master:children]
 esmaster0
 esmaster1
 esmaster2
+esmaster3
+esmaster4
+esmaster5
 
 [es_master:vars]
 elasticsearch_master=true
@@ -159,6 +178,11 @@ es11
 es12
 es13
 es14
+es15
+es16
+es17
+es18
+es19
 
 [es_data:vars]
 elasticsearch_node_zone=aws
