--- a/src/commcare_cloud/ansible/roles/keepalived/templates/notify_script.j2
+++ b/src/commcare_cloud/ansible/roles/keepalived/templates/notify_script.j2
@@ -10,16 +10,16 @@ hostname = socket.gethostbyaddr(socket.gethostname())[0].split('.')[0]
 state= sys.arg[1]
 
 msg = MIMEMultipart()
-msg['From'] = "{{ sender_email }}"
-msg['To'] = "{{ recepient_email }}"
+msg['From'] = "{{ keepalived_smtp_host }}"
+msg['To'] = "{{ keepalived_recepient_email }}"
 msg['Subject'] = 'ALERT:proxy server status changed'
 
 body = "{0} entered in {1} state".format(hostname,state)
 msg.attach(MIMEText(body,'plain'))
 
 text = msg.as_string()
-server = smtplib.SMTP('{{ smtp_server }}',587)
+server = smtplib.SMTP('{{ keepalived_smtp_host }}','{{ keepalived_smtp_port }}')
 server.starttls()
-server.login("{{ sender_email }}", "{{ sender_password }}")
-server.sendmail("{{ sender_email }}", "{{ recepient_email }}",text)
+server.login("{{ keepalived_smtp_login }}", "{{ keepalived_smtp_password }}")
+server.sendmail("{{ keepalived_sender_email }}", "{{ keepalived_recepient_email }}",text)
 server.quit()
