--- a/src/commcare_cloud/ansible/roles/commcarehq/templates/localsettings.py.j2
+++ b/src/commcare_cloud/ansible/roles/commcarehq/templates/localsettings.py.j2
@@ -895,3 +895,7 @@ UCR_COMPARISONS = {
 {% if localsettings.KAFKA_API_VERSION is defined %}
 KAFKA_API_VERSION = tuple({{ localsettings.KAFKA_API_VERSION }})
 {% endif %}
+
+{% if localsettings.ICDS_USE_CITUS is defined %}
+ICDS_USE_CITUS = localsettings.ICDS_USE_CITUS
+{% endif %}
