Revert "Set up formplayer in ansible"

--- a/src/commcare_cloud/ansible/roles/datadog/templates/jmx.yaml.j2
+++ b/src/commcare_cloud/ansible/roles/datadog/templates/jmx.yaml.j2
@@ -3,7 +3,7 @@
 #
 init_config:
   custom_jar_paths: # optional
-    - {{ www_home }}/formplayer_build/current/formplayer.jar
+    - {{ code_home }}/formplayer_build/formplayer.jar
 
 instances:
 {% for port in ['9999', '9998'] %}
