Fix issue where new formplayer deploy leaves it unable to find config files

--- a/src/commcare_cloud/ansible/roles/commcarehq/templates/supervisor_formplayer_spring.conf.j2
+++ b/src/commcare_cloud/ansible/roles/commcarehq/templates/supervisor_formplayer_spring.conf.j2
@@ -8,5 +8,5 @@ autorestart=true
 stdout_logfile={{ log_home }}/formplayer-spring.log
 redirect_stderr=true
 stderr_logfile={{ log_home }}/formplayer-spring.error.log
-directory={{ www_home }}/formplayer_build
+directory={{ www_home }}/formplayer_build/current
 startsecs=10
