--- a/environments/production/inventory.ini.j2
+++ b/environments/production/inventory.ini.j2
@@ -120,8 +120,11 @@ formplayer3
 
 {{ __redis0__ }} swap_size=1G
 
+{{ __redis1__ }} swap_size=1G
+
 [redis:children]
 redis0
+redis1
 
 {{ __shareddir0__ }}
 
