--- a/src/commcare_cloud/ansible/roles/elasticsearch/templates/systemd/elasticsearch.service.j2
+++ b/src/commcare_cloud/ansible/roles/elasticsearch/templates/systemd/elasticsearch.service.j2
@@ -9,6 +9,7 @@ Environment=ES_HOME={{ elasticsearch_home }}
 Environment=CONF_DIR={{ elasticsearch_conf_dir}}
 Environment=ES_PATH_CONF={{ elasticsearch_conf_dir}}
 Environment=ES_HEAP_SIZE={{ elasticsearch_memory }}
+Environment=HEAP_DUMP_LOCATION= {{ elasticsearch_data_dir }}/logs
 
 WorkingDirectory=/opt/elasticsearch-1.7.6
 
