--- a/environments/production/inventory.ini.j2
+++ b/environments/production/inventory.ini.j2
@@ -79,16 +79,12 @@ rabbit1
 [rabbitmq:vars]
 swap_size=2G
 
-{{ __kafka0__ }} kafka_broker_id=1
-
 {{ __kafka1__ }} kafka_broker_id=2
 
 [zookeeper:children]
-kafka0
 kafka1
 
 [kafka:children]
-kafka0
 kafka1
 
 {{ __celery9__ }}
@@ -188,7 +184,7 @@ swap_size=8G
 [couchdb2_proxy:children]
 couchproxy1
 
-{{ __control__ }}
+{{ __control1__ }}
 
 {{ __djangomanage1__ }}
 
