Add support for batch App Status localsettings

--- a/src/commcare_cloud/ansible/roles/commcarehq/templates/localsettings.py.j2
+++ b/src/commcare_cloud/ansible/roles/commcarehq/templates/localsettings.py.j2
@@ -297,6 +297,12 @@ ICDS_SMS_INDICATOR_DOMAINS = ['{{ localsettings.ICDS_DOMAIN }}']
 {% if 'USER_REPORTING_METADATA_UPDATE_FREQUENCY_HOURS' in localsettings %}
 USER_REPORTING_METADATA_UPDATE_FREQUENCY = {{ localsettings.USER_REPORTING_METADATA_UPDATE_FREQUENCY_HOURS }} * 60
 {% endif %}
+{% if 'USER_REPORTING_METADATA_BATCH_ENABLED' in localsettings %}
+USER_REPORTING_METADATA_BATCH_ENABLED = {{ localsettings.USER_REPORTING_METADATA_BATCH_ENABLED }}
+{% endif %}
+{% if 'USER_REPORTING_METADATA_BATCH_SCHEDULE' in localsettings %}
+USER_REPORTING_METADATA_BATCH_SCHEDULE = {{ localsettings.USER_REPORTING_METADATA_BATCH_SCHEDULE }}
+{% endif %}
 
 SMS_QUEUE_ENABLED = {{localsettings.get('SMS_QUEUE_ENABLED', False)}}
 REMINDERS_QUEUE_ENABLED = {{localsettings.get('REMINDERS_QUEUE_ENABLED', False)}}
