--- a/environments/production/inventory.ini.j2
+++ b/environments/production/inventory.ini.j2
@@ -110,9 +110,9 @@ swap_size=8G
 [pillowtop:children]
 pillow1
 
-{{ __formplayer2__ }}
+{{ __formplayer2__ }} swap_size=8G
 
-{{ __formplayer3__ }}
+{{ __formplayer3__ }} swap_size=8G
 
 [formplayer:children]
 formplayer2
