--- a/src/commcare_cloud/ansible/roles/commcarehq/templates/localsettings.py.j2
+++ b/src/commcare_cloud/ansible/roles/commcarehq/templates/localsettings.py.j2
@@ -44,10 +44,10 @@ DATABASES = { {% for config in postgresql_dbs.all %}
         {% endif -%}
         {% if config.get('master') -%}
         'STANDBY': {
-            'MASTER': {{ config.master }},
+            'MASTER': '{{ config.master }}',
             'ACCEPTABLE_REPLICATION_DELAY': {{ config.acceptable_replication_delay }},
         }
-        {% endif -%}
+    {% endif -%}
     },
 {% endif -%}
 {% endfor %}
