--- a/src/commcare_cloud/ansible/roles/commcarehq/templates/localsettings.py.j2
+++ b/src/commcare_cloud/ansible/roles/commcarehq/templates/localsettings.py.j2
@@ -436,6 +436,10 @@ SECRET_KEY = "{{ SECRET_KEY }}"
 
 PRIME_VIEWS_INTERVAL = 2
 
+{% if 'ALTERNATE_HOSTS' in localsettings %}
+ALTERNATE_HOSTS = {{ localsettings.ALTERNATE_HOSTS }}
+{% else %}
+
 ####### PACT SPECIAL SETTINGS
 
 PACT_HP_GROUP_ID = "ee042f33c890421794f69ed81e030882"
